fix: hide overflow on body to prevent scrollbar when logo is translated off-screen

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -29,6 +29,7 @@ canvas {
 
 body {
 	cursor: none;
+	overflow: hidden;
 	display: flex;
 	justify-content: center;
 	align-items: center;
